# backend

./: .env  .gitignore  docker-compose.yaml  docker-compose.yml  grafana.yml  influxdb.yml  nginx.yml  nodered.yml  python-backend.yml  readme.md
air-quality-lorawan/: .dockerignore  Dockerfile  config.json  config.py  httpserver.py  influx_database.py  main.py  pyproject.toml  testinfl.py
air-quality-lorawan/root/: configpage.css  configpage.js  enddevicePage.css  enddevicePage.js
air-quality-lorawan/templates/: configpage.html  configpage.js  enddevicePage.html  enddevicePage.js
configuration/grafana/: grafana.ini
configuration/grafana/datasources/: lorawan-datasource.yaml
configuration/grafana/provisioning/dashboards/: Measurments.json  NetworkHeatlh.json  configuration.json
configuration/grafana/provisioning/datasources/: lorawan-datasource.yaml
configuration/influxdb/data/: influxd.bolt
configuration/influxdb/data/engine/data/976d0d19c9f01862/autogen/1/: fields.idx
configuration/influxdb/data/engine/data/976d0d19c9f01862/autogen/2/: 000000001-000000001.tsm  fields.idx
configuration/influxdb/data/engine/data/976d0d19c9f01862/autogen/3/: fields.idx
configuration/nginx/: .htpasswd  nginx.conf
configuration/nodered/: .config.nodes.json  .config.nodes.json.backup  .config.runtime.json  .config.users.json  .config.users.json.backup  .flow.json.backup  .flow_cred.json.backup  .sessions.json  flow.json  settings.js
configuration/python-backend/: config.json
docker/nodered/: Dockerfile
(+40 files in other folders)
